--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,11 @@ h1 {
 button {
     font-family: "Lato";
     font-weight: bold;
+    color: #fff;
+    text-decoration: none;
+}
+a {
+    text-decoration: none;
 }
 
 nav {
@@ -29,6 +34,9 @@ nav {
     height: 70px;
     background-color: rgba(69, 69, 69, 0.5);
     padding: 0px 30px 0px 30px;
+}
+nav a {
+    display: inline-flex;
 }
 .section-secondary {
     background-color: rgba(69, 69, 69, 0.5);
