--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap');
 
 body {
-    background: #272727;
+    /* background: #272727; */
+    background-image: url("background.jpg");
+    background-size: cover;
+    background-attachment: fixed;
     color: #fff;
     font-family: "Lato";
 }
@@ -30,16 +33,17 @@ a {
 nav {
     display: flex;
     justify-content: flex-start;
+    align-content: center;
     align-items: stretch;
     height: 70px;
-    background-color: rgba(69, 69, 69, 0.5);
+    background-color: rgba(69, 69, 69, 0.8);
     padding: 0px 30px 0px 30px;
 }
 nav a {
     display: inline-flex;
 }
 .section-secondary {
-    background-color: rgba(69, 69, 69, 0.5);
+    background-color: rgba(69, 69, 69, 0.8);
 }
 .underlined {
     text-decoration: #ff7b00 dashed underline;
@@ -50,12 +54,12 @@ button {
     border: none;
     border-bottom: 5px solid transparent;
     color: #fff;
-    margin-left: 15px;
-    padding: 0px 20px 0px 20px;
+    margin: 0px 7px 0px 7px;
+    padding: 15px 20px 15px 20px;
     transition: 180ms;
 }
 button:hover {
-    background: rgba(69, 69, 69, 0.5);
+    background: rgba(0, 0, 0, 0.3);
     border-bottom: 5px solid #ff7b00;
 }
 nav img {
@@ -79,6 +83,8 @@ nav img {
     height: 20vw;
     background-color: #fff;
     background-size: cover;
+    background-position: center;
+    margin-bottom: 69px;
 }
 .caption-overlay {
     background-color: transparent;
@@ -90,17 +96,30 @@ nav img {
     transform: perspective(900px) rotateX(180deg);
 }
 .gallery-item:hover .caption-overlay {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
     color: #fff;
     visibility: visible;
     transform: perspective(900px) rotateX(0deg);
 }
+.caption-overlay button {
+    color: inherit;
+}
+#gallery-window {
+    position: fixed;
+    width: 80%;
+    height: 80%;
+    left: 10%;
+    top: 10%;
+    background: #fff;
+    color: #000;
+    padding: 69px;
+    z-index: 100;
+}
 
-#profile-end {
-    display: flex;
-    justify-content: flex-end;
-    align-items: stretch;
-    height: 70px;
-    position: absolute;
-    right: 30px;
+#gallery-full {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
